ALL FUNCTIONALITIES IMPLEMENTED EXCEPT PART 1